test/expected/explain_bi1.out
explain _BitInt(1) x
        ^
9: error: _BitInt must be at least 2 bits
